--- a/views/home.hbs
+++ b/views/home.hbs
@@ -284,7 +284,8 @@
                         </div>
                         <div class="right">
                             <div class="downloads">{{formatNumber downCount}}</div>
-                            {{#if downCountDesc}}<div class="dev" style="font-size:11px">{{downCountDesc}}</div>{{/if}}
+                            <div class="downloads">Downloads</div>
+                            {{!-- {{#if downCountDesc}}<div class="dev" style="font-size:11px">{{downCountDesc}}</div>{{/if}} --}}
                         </div>
                     </article>
                     {{/if}}
